# frogl

./: .gitignore  CMakeLists.txt  main.cpp
compiler/: compiler.cpp  compiler.h  sliced_string.h  source.h  string_source.cpp  string_source.h  token.h
compiler/parser/: context.h  parser.cpp  parser.h  sliced_string.h  token.cpp  tokenizer.cpp  tokenizer.h
compiler/translator/: const_table.cpp  const_table.h  fbc_buffer.cpp  fbc_buffer.h  opcodes.h  translator.cpp  translator.h  variable_table.cpp  variable_table.h
vm/: lambda.cpp  lambda.h  vm.cpp  vm.h
vm/compiler/parser/: parser.cpp  parser.h  source.cpp  string_source.cpp  string_source.h  token.h  tokenizer.cpp  tokenizer.h
vm/util/: context.h  fbc_buffer.cpp  fbc_buffer.h  retval_args_buffer.h
